# bevy-simple-2d-outline

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/shaders/: custom_material.wgsl  outline_and_texture_material.wgsl  outline_and_texture_material_animate.wgsl  outline_material.wgsl  rainbow_outline_and_texture_material.wgsl  rainbow_outline_material.wgsl
examples/: custom-material.rs  outline.rs  outline_and_texture.rs  rainbow.rs  rainbow_outline.rs  rainbow_outline_and_texture.rs
src/: lib.rs
