[package]
name = "bevy_simple_2d_outline"
version = "0.1.0"
edition = "2021"
description = "A simple 2d outline shader for Bevy"
categories = ["graphics","rendering"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bevy = { version = "0.9.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_sprite",
    "bevy_render",
    "bevy_asset",
    "render",
    "png"
] }

[[example]]
name = "custom-material"
path = "examples/custom-material.rs"