[package]
name = "bevy_simple_2d_outline"
version = "0.1.0"
edition = "2021"
description = "A simple 2d outline shader for Bevy"
categories = ["graphics","rendering"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bevy = { version = "0.9.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_sprite",
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "png"
] }
[[example]]
name = "outline"
path = "examples/outline.rs"

[[example]]
name = "outline_and_texture"
path = "examples/outline_and_texture.rs"

[[example]]
name = "rainbow_outline"
path = "examples/rainbow_outline.rs"

[[example]]
name = "rainbow_outline_and_texture"
path = "examples/rainbow_outline_and_texture.rs"