[package]
name = "bevy_simple_2d_outline"
version = "0.2.0"
edition = "2021"
description = "2D outline materials for the bevy game engine"
keywords = ["shaders","2d", "bevy", "wgsl"]
categories = ["shaders","2d", "bevy", "wgsl"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/theseatoad/bevy-simple-2d-outline"
homepage = "https://github.com/theseatoad/bevy-simple-2d-outline"

[dependencies]
bevy = { version = "0.10.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_sprite",
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "png",
    "x11"
] }
[[example]]
name = "outline"
path = "examples/outline.rs"

[[example]]
name = "outline_and_texture"
path = "examples/outline_and_texture.rs"

[[example]]
name = "rainbow_outline"
path = "examples/rainbow_outline.rs"

[[example]]
name = "rainbow_outline_and_texture"
path = "examples/rainbow_outline_and_texture.rs"